Refactor dataset retrieval functionality: - Removed obsolete Jupyter notebook and Excel files. - Updated requirements.txt with new package versions. - Implemented a new data retrieval script (data_retieval.py) for fetching datasets from Kaggle and OpenML. - Created an example usage script (example_of_usage.py) to demonstrate the functionality of the DatasetRetrieval class.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,34 @@
+# Ignore data output directories
 data_retrieval_output/
+
+# Ignore environment files
 .env/
+
+# Ignore Python cache files
+__pycache__/
+*.py[cod]
+
+# Ignore virtual environments
+.venv/
+
+# Ignore system files
+.DS_Store
+Thumbs.db
+
+# Ignore logs
+*.log
+
+# Ignore temporary files
+*.tmp
+*.swp
+*.swo
+
+# Ignore compiled code
+*.so
+*.dll
+*.dylib
+*.pyd
+
+# Ignore IDE-specific files
+.vscode/
+.idea/
