--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,38 @@
-kaggle==1.5.15
-numpy==1.23.5
-openml==0.13.1
-pandas==1.5.3
-XlsxWriter==3.1.2
+argon2-cffi==25.1.0
+argon2-cffi-bindings==25.1.0
+bleach==6.3.0
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+et_xmlfile==2.0.0
+idna==3.11
+joblib==1.5.2
+kaggle==1.7.4.5
+liac-arff==2.5.0
+minio==7.2.18
+numpy==2.3.4
+openml==0.15.1
+openpyxl==3.1.5
+packaging==25.0
+pandas==2.3.3
+protobuf==6.33.1
+pyarrow==22.0.0
+pycparser==2.23
+pycryptodome==3.23.0
+python-dateutil==2.9.0.post0
+python-slugify==8.0.4
+pytz==2025.2
+requests==2.32.5
+scikit-learn==1.7.2
+scipy==1.16.3
+setuptools==80.9.0
+six==1.17.0
+text-unidecode==1.3
+threadpoolctl==3.6.0
+tqdm==4.67.1
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+webencodings==0.5.1
+xlsxwriter==3.2.9
+xmltodict==1.0.2
